add some images

--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -70,7 +70,7 @@
       </div>
 
       <div class="container2-col2">
-        <img src="assets/Live-Casino-studio-768x307.jpeg.webp" />
+        <img class="container_imgs" src="assets/sirplay vrnl 26_data.jpg" />
       </div>
     </div>
   </section>
@@ -79,7 +79,7 @@
   <section class="container3">
     <div class="container3-row">
       <div class="container3-col1">
-        <img src="assets/casino-main-feature.jpg.webp" />
+        <img src="assets/vrnl_17.jpg" />
       </div>
 
       <div class="col2-text">
@@ -196,7 +196,7 @@
   <section class="container5">
     <div class="container5-row">
       <div class="container5-col1">
-        <img src="assets/integration_with_other_platforms.jpg.webp" />
+        <img class="integration_images" src="assets/sirplay vrnl 12.jpg" />
       </div>
 
       <div class="container5-col2">
