--- a/src/app/cashout/cashout.component.html
+++ b/src/app/cashout/cashout.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="cashout-section1-right-col">
-        <img src="assets/Cashout_en.png.webp" alt="" />
+        <img class="cash_images" src="assets/sirplay vrnl 30_data.jpg" alt="" />
       </div>
     </div>
   </section>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="cashout-section2-col2">
-        <img src="assets/sports_betting-software-1.jpg.webp" alt="" />
+        <img class="cash_img_1" src="assets/sirplay vrnl 27_data.jpg" alt="" />
       </div>
     </div>
   </section>
@@ -60,7 +60,7 @@
   <section>
     <div class="cashout-section3-row">
       <div class="cashout-section3-col1">
-        <img src="assets/Pre-match-Cashout.png.webp" alt="" />
+        <img class="cash_wide" src="assets/sirplay vrnl 31_data.jpg" alt="" />
       </div>
 
       <div class="cashout-section3-col2">
@@ -105,7 +105,7 @@
       </div>
 
       <div class="cashout-section4-col2">
-        <img src="assets/sportsbook-provider.png (1).webp" alt="" />
+        <img class="cashout_kholi" src="assets/sirplay sportbook 1.jpg" alt="" />
       </div>
     </div>
   </section>
@@ -115,7 +115,7 @@
   <section>
     <div class="cashout-section5-row">
       <div class="cashout-section5-col1">
-        <img src="assets/Live-betting-Cashout.png.webp" alt="" />
+        <img class="msd_cash" src="assets/sirplay vrnl 24_data.jpg" alt="" />
       </div>
 
       <div class="cashout-section5-col2">
