--- a/src/app/live-casino/live-casino.component.css
+++ b/src/app/live-casino/live-casino.component.css
@@ -52,7 +52,10 @@ color: #575756;
 font-size: calc(285.7%);
 }
 
-
+.container_images_b{
+  width: 605px;
+  height: 476px;
+}
 
 
 .left-text-index3 h2{
@@ -2215,10 +2218,12 @@ margin-top: 2%;
 .container7-col1 img {
    
     width: 100%;
+    height: auto;
 }
     .container7-row {
         display: flex;
      flex-direction: column;
+     gap:59px;
     }
 
 
@@ -2266,6 +2271,19 @@ margin-top: 2%;
        
          margin-left: 0px;
     }
+    .container6 {
+      padding-top: 4px !important;
+      padding-bottom: 15px !important;
+  }
+  .btns_lives_sec{
+    margin-top: 21px !important;
+
+  }
+  .container7 {
+    padding-top: 2px !important;
+    padding-bottom: 90px !important;
+}
+
 }
 
 .iframe_sec_images iframe{
