--- a/src/app/bitcoin/bitcoin.component.html
+++ b/src/app/bitcoin/bitcoin.component.html
@@ -137,7 +137,7 @@
     <div class="contact_social">
       <div class="contact_details">
         <div class="row_col">
-      <img src="assets/Skype_logo.png">
+      <img src="assets/Skype_logo.webp">
         </div>
         <div class="row_col_1">
           <p class="contact_b">English Spanish</p>
@@ -147,7 +147,7 @@
     <div class="contact_social">
       <div class="contact_details">
         <div class="row_col">
-      <img class="whats_img" src="assets/Whatsapp.jpg">
+      <img class="whats_img" src="assets/Whatsapp.webp">
         </div>
         <div class="row_col_1">
           <p class="contact_a">+356 99972143</p>
