--- a/src/app/casino-tournament/casino-tournament.component.html
+++ b/src/app/casino-tournament/casino-tournament.component.html
@@ -21,7 +21,7 @@
 
 
         <div class="index5-right-img">
-            <img src="assets/sirplay vrnl 2 demo.jpg" alt="" width="589"  height="389">
+            <img src="assets/sirplay vrnl 2.webp" alt="" width="589"  height="389">
             
         </div>
 
@@ -37,7 +37,7 @@
 
 <section class="conatiner14">
     <div class="index5-leftimg">
-        <img src="assets/casino-tool-tournaments.png" alt="">
+        <img src="assets/casino-tool-tournaments.webp" alt="">
 
     </div>
 
