--- a/src/app/decentralized/decentralized.component.html
+++ b/src/app/decentralized/decentralized.component.html
@@ -204,7 +204,7 @@
           
               <div class="crypto-section6-right">
               <h2>Lottery and Bingo games online and retails</h2>
-              <img src="assets/crypto-bingo-providers-768x274.jpg" alt="">
+              <img src="assets/crypto-bingo-providers-768x274.webp" alt="">
               </div>
             </div>
           
