--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -170,7 +170,7 @@
 <div class="responsive">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <div class="nav_col">
+      <div class="nav_col" routerLink="/">
         <img src="assets/sirplay.logo.png" />
       </div>
       <button
