--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -2,7 +2,7 @@
     <header class="page-header" [class.is-sticky]="isSticky">
         <nav>
             <div class="hader_row">
-                <div class="nav_col">
+                <div class="nav_col" routerLink="/">
 <img class="images_logo" src="assets/sirplay.logo.png">
                 </div>
                 <div class="nav_col_1">
