--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -2,7 +2,7 @@
     <img
       src="assets/Sirplay_sports_betting_software.png"
       alt=""
-      class="logo"
+      class="logo" routerLink="/"
     />
 
     <nav class="navbar">
