--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -38,7 +38,7 @@
       <div class="platform_col_2">
         <img
           class="platform_img"
-          src="assets/sirplayvrnl1 (1).jpg"
+          src="assets/sirplay-vrnl-1.webp"
         width="544" height="310">
         <div class="platform_you_tube">
           <a href="#"
@@ -81,7 +81,7 @@
       <div class="whites_col_1">
         <img
           class="whites_sec_img2"
-          src="assets/sirplay whites.jpg"
+          src="assets/sirplay whites.webp"
           width="543"
           height="317"
         />
@@ -94,7 +94,7 @@
       <div class="gaming_col">
         <img
           class="gaming_img"
-          src="assets/sirplay igaming.jpg"
+          src="assets/sirplay igaming.webp"
           width="520"
           height="325"
         />
@@ -149,7 +149,7 @@
       <div class="casino_col_2">
         <img
           class="casino_sec_img2"
-          src="assets/sirplay online c.jpg"
+          src="assets/sirplay online c.webp"
           width="840"
           height="700"
         />
@@ -165,7 +165,7 @@
           Play at the live casino as if you were directly inside the casino
         </h1>
         <img
-          src="assets/sirplay vrnl 19.jpg"
+          src="assets/sirplay vrnl 19.webp"
           width="809"
           height="372"
         />
@@ -224,7 +224,7 @@
       <div class="web3_col_1">
         <img
           class="web3_img"
-          src="assets/sirplay vrnl 22.jpg"
+          src="assets/sirplay vrnl 22.webp"
           width="353"
           height="650"
         />
@@ -255,7 +255,7 @@
       <div class="crypto_col_1">
         <img
           class="crypto_sec_img2"
-          src="assets/sirplay vrnl 33.jpg"
+          src="assets/sirplay-vrnl-33.webp"
           width="531"
           height="295"
           title="Crypto Sportsbook"
@@ -269,7 +269,7 @@
     <div class="integration_row">
       <div class="integration_col">
         <img
-          src="assets/sirplay vrnl 12.jpg"
+          src="assets/sirplay vrnl 12.webp"
           title="integration_platforms"
           width="545"
           height="315"
