--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -42,7 +42,7 @@
     </div>
 
 <div class="sports_book_col_1">
-<img src="assets/sirplay sportbook 1.jpg" width="410" height="504">
+<img src="assets/sirplay sportbook 1.webp" width="410" height="504">
 </div>
 
 </div>
@@ -165,7 +165,7 @@
       
           <div class="crypto-section6-right">
           <h2>Lottery and Bingo games online and retails</h2>
-          <img src="assets/crypto-bingo-providers-768x274.jpg" alt="">
+          <img src="assets/crypto-bingo-providers-768x274.webp" alt="">
           </div>
         </div>
       
