--- a/src/app/retail/retail.component.html
+++ b/src/app/retail/retail.component.html
@@ -25,7 +25,7 @@
         <h1 class="ter_head_1">The Terminals</h1>
         <img
           class="terminal_img"
-          src="assets/betting-terminals_2020.jpg.webp"
+          src="assets/betting-terminals.webp"
         />
       </div>
       <div class="terminal_col_1">
@@ -65,7 +65,7 @@
       <div class="screen_col_1">
         <img
           class="screen_img_1"
-          src="/assets/betting-shop-with-terminals.jpg.webp"
+          src="/assets/betting-shop-with-terminals.webp"
           alt="image"
           title="Retail_Solution"
         />
