--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -145,7 +145,7 @@
       </div>
 
       <div class="sportsbetting-benefits-image">
-        <img src="assets/sports-betting-software-sirplay.jpg" alt="" />
+        <img src="assets/sports-betting-software-sirplay.webp" alt="" />
       </div>
     </div>
   </section>
@@ -197,7 +197,7 @@
   <section>
     <div class="sportsbetting-crypto-sports-main">
       <div class="sportsbetting-crypto-sports-col1">
-        <img src="assets/crypto-sports-betting-software (1).jpg" alt="" />
+        <img src="assets/crypto-sports-betting-software.webp" alt="" />
       </div>
       <div class="sportsbetting-crypto-sports-col2">
         <h2>Crypto sports betting software</h2>
@@ -271,7 +271,7 @@
       <div class="sportsbetting-online-retail-col1">
         <img
           class="payment_img"
-          src="assets/sportsbook-payment-system (1).png"
+          src="assets/sportsbook-payment-system.webp"
           alt=""
         />
       </div>
