--- a/src/app/streaming/streaming.component.html
+++ b/src/app/streaming/streaming.component.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="index6-right-img">
-        <img src="assets/Streaming-platform-2-768x462.jpg" alt="" />
+        <img src="assets/Streaming-platform-2-768x462.webp" alt="" />
       </div>
     </div>
   </section>
@@ -47,14 +47,14 @@
       <div class="social_col">
         <img
           class="over_img"
-          src="assets/Over-20-social-platforms-150x150.jpg"
+          src="assets/Over-20-social-platforms-150x150.webp"
         />
         <h4 class="chanel_param">Over 20 social platforms</h4>
       </div>
       <div class="social_col_1">
         <img
           class="multi_img"
-          src="assets/Multiple-channels-on-one-platform-150x150.jpg"
+          src="assets/Multiple-channels-on-one-platform-150x150.webp"
         />
 
         <h4 class="chanel_param">Multiple channels on one platform</h4>
@@ -62,7 +62,7 @@
       <div class="social_col_2">
         <img
           class="server_img"
-          src="assets/Your-server-or-anywhere-else-150x150.jpg"
+          src="assets/Your-server-or-anywhere-else-150x150.webp"
         />
 
         <h4 class="chanel_param">Your server or anywhere else</h4>
@@ -75,7 +75,7 @@
   <section class="container17">
     <div class="index6-sec3-main">
       <div class="index6-sec3-leftimg">
-        <img src="assets/How-it-works.jpg" alt="" />
+        <img src="assets/How-it-works.webp" alt="" />
       </div>
 
       <div class="index6-sec3-righttext">
@@ -138,7 +138,7 @@
       </div>
 
       <div class="index6-sec4-rightimg">
-        <img src="assets/Use-cases2.jpg" alt="" />
+        <img src="assets/Use-cases2.webp" alt="" />
       </div>
     </div>
   </section>
@@ -149,7 +149,7 @@
     <div class="index6-sec5-main">
       <div class="index6-sec5-leftimg">
         <img
-          src="assets/Share-the-stage-with-your-guests-e1677605030559.jpg"
+          src="assets/Share-the-stage-with-your-guests-e1677605030559.webp"
           alt=""
         />
       </div>
@@ -202,7 +202,7 @@
       </div>
 
       <div class="index6-sec6-rightimg">
-        <img src="assets/Schedule-your-betting-live-streams.jpg" alt="" />
+        <img src="assets/Schedule-your-betting-live-streams.webp" alt="" />
       </div>
     </div>
   </section>
@@ -212,7 +212,7 @@
   <section class="container21">
     <div class="index6-sec7-main">
       <div class="index6-sec7-leftimg">
-        <img src="assets/Make-streaming-less-complicated-1.jpg " alt="" />
+        <img src="assets/Make-streaming-less-complicated-1.webp " alt="" />
       </div>
 
       <div class="index6-sec7-righttext">
