--- a/src/app/terminal/terminal.component.html
+++ b/src/app/terminal/terminal.component.html
@@ -116,7 +116,7 @@
       <div class="terminals-android-col1">
         <img
           class="prin_img"
-          src="assets/betting-Bluetooth-printer.png.webp"
+          src="assets/betting-Bluetooth-printer.webp"
           alt=""
         />
         <h2>Portable blutooth printer</h2>
@@ -138,7 +138,7 @@
         <h2>Android POS terminal</h2>
         <img
           class="and_img"
-          src="assets/android-mini-ticket-printer.jpg.webp"
+          src="assets/android-mini-ticket-printer.webp"
           alt=""
         />
 
