--- a/src/app/web3sportbook/web3sportbook.component.html
+++ b/src/app/web3sportbook/web3sportbook.component.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="sports_book_col_1">
-            <img src="assets/web3_sportsbook-1.jpg">
+            <img src="assets/crypto-sports-betting-software.webp">
         </div>
 
     </div>
@@ -91,7 +91,7 @@
                 casino games and casino games available online.</li>
         </ul>
         <div class="web_3_igaming_img">
-            <img class="web_images_1" src="assets/sirplay web3.jpg" title="Web3 plateform" width="1024" height="352">
+            <img class="web_images_1" src="assets/sirplay web3.webp" title="Web3 plateform" width="1024" height="352">
         </div>
     </div>
 
@@ -165,7 +165,8 @@
 
         <div class="crypto-section6-right">
             <h2>Lottery and Bingo games online and retails</h2>
-            <img src="assets/crypto-bingo-providers-768x274.jpg" alt="">
+            <img src="assets/crypto-bingo-providers-768x274.webp" alt="">
+            
         </div>
     </div>
 
