--- a/src/app/crypto/crypto.component.html
+++ b/src/app/crypto/crypto.component.html
@@ -72,7 +72,7 @@
 <div class="crypto-section3-main">
 
 <div class="crypto-section3-leftimg">
-<img class="crypto_images_1" src="assets/csirplaycryptotv1.jpg" alt="" width="601" height="613">
+<img class="crypto_images_1" src="assets/sirplay crypto tv.webp" alt="" width="601" height="613">
 </div>
 
 
@@ -110,7 +110,7 @@
     <div class="web3_page_row">
         <div class="web_page_col">
             <h1 class="web_3_header">Top online casino providers at World Class</h1>
-            <img class="web_3_images" src="assets/sirplay online c.jpg" width="840" height="700">
+            <img class="web_3_images" src="assets/sirplay online c.webp" width="840" height="700">
         </div>
         <div class="web_page_col_1">
             <p class="web3_header_crp"> <strong> The numbers of our crypto casino software </strong></p>
