--- a/src/app/header3/header3.component.css
+++ b/src/app/header3/header3.component.css
@@ -764,11 +764,11 @@ body {
   background-color: #fff;
   position: fixed;
   width: 100%;
-  box-shadow: 0em 0.19em 0.3em 0px hsla(0, 0%, 0%, 0.11);
+  /* box-shadow: 0em 0.19em 0.3em 0px hsla(0, 0%, 0%, 0.11); */
 }
 
 .header .logo {
-  height: 4rem;
+  height: 3rem;
 }
 
 .navbar-list {
