--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -40,7 +40,7 @@ It will also allow you to promote a match, league or bet, regularly increasing y
         </div>
         
         <div class="mobile-advantages-right">
-            <img src="assets/Advantages-of-Mobile-betting.jpg.webp" alt="">
+            <img src="assets/Advantages-of-Mobile-betting.webp" alt="">
         </div>
 
     </div>
@@ -58,7 +58,7 @@ It will also allow you to promote a match, league or bet, regularly increasing y
         <div class="contact_social">
           <div class="contact_details">
             <div class="row_col">
-              <img src="assets/Skype_logo.png" />
+              <img src="assets/Skype_logo.webp" />
             </div>
             <div class="row_col_1">
               <p class="contact_b">English Spanish</p>
@@ -68,7 +68,7 @@ It will also allow you to promote a match, league or bet, regularly increasing y
         <div class="contact_social">
           <div class="contact_details">
             <div class="row_col">
-              <img class="whats_img" src="assets/Whatsapp.jpg" />
+              <img class="whats_img" src="assets/Whatsapp.webp" />
             </div>
             <div class="row_col_1">
               <p class="contact_a">+356 99972143</p>
