--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,8 @@
         </div>
         <div class="nav_col_2">
           <div class="nav_row_2">
-            <li class="active">
-              <a class="act" routerLink="/" >Home</a>
+            <li class="active ">
+              <a class="act acthome current_page_item " routerLink="/" style="color: #A0C528;" >Home</a>
             </li>
             <li>
               <a class="act" href="#">Betting</a>
