--- a/src/app/contact-com/contact-com.component.css
+++ b/src/app/contact-com/contact-com.component.css
@@ -176,6 +176,45 @@ cursor: pointer;
     padding-left: 45px;
 }
 
+
+
+.wpcf7-response-output {
+    border: 2px solid;
+    border-color: #ffb900 !important;
+    /* display: none; */
+}
+.wpcf7 form .wpcf7-response-output {
+    margin: 2em 0.5em 1em;
+    padding: 0.2em 1em;
+    border: 2px solid #00a0d2;
+}
+.niva-contact label span, div.wpcf7-response-output {
+    font-weight: 400;
+    color: #000000 !important;
+    margin: 15px 0;
+}
+
+
+.wpcf7-spinner {
+    /* visibility: hidden; */
+    display: inline-block;
+    background-color: #23282d;
+    opacity: 0.75;
+    width: 24px;
+    height: 24px;
+    border: none;
+    border-radius: 100%;
+    padding: 0;
+    margin: 0 24px;
+    position: relative;
+}
+
+
+
+
+
+
+
 /* .icon{
     background-image: url("/assets/FLAG.jpg");
  background-repeat: no-repeat;
