--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -358,3 +358,22 @@ cursor: pointer;
         color: white;
        
     }
+    .act:hover{
+      color: #A0C528 !important;
+    }
+
+    .nav_row_2 .current_page_item a :after {
+      content: "";
+      background-color: #a0c528;
+      height: 3px;
+      width: 0;
+      position: absolute;
+      left: 3px;
+      bottom: 9px;
+      transition: 0.3s;
+  }
+
+  .nav_row_2 .current_page_item a:hover:after {
+    width: 100%;
+    color: #a0c528;
+}
