--- a/src/app/bitcoin/bitcoin.component.html
+++ b/src/app/bitcoin/bitcoin.component.html
@@ -22,7 +22,7 @@
                 care of each step of the building up process, delivering to you a complete and performing Platform.
             </p>
             <div class="onther_btn">
-                <button class="hover-1_1 otn_s_1 "><i class="fa-solid fa-phone"></i>     Contact us!</button> 
+                <button class="hover-1_1 otn_s_1 button_slide slide_right "><i class="fa-solid fa-phone"></i>     Contact us!</button> 
             
             </div> 
         </div>
