--- a/src/app/crypto/crypto.component.html
+++ b/src/app/crypto/crypto.component.html
@@ -52,11 +52,9 @@
   <i class="fa-solid fa-phone" >GET QUOTE</i>
 </a> -->
 <div class="crypto_btn">
-<button class="hover-1_1 btn_s_1"><i class="fa-solid fa-phone"></i>     Contact us!</button> 
+<button class="hover-1_1 btn_s_1 button_slide slide_right"><i class="fa-solid fa-phone"></i>     Contact us!</button> 
 </div>
 </div>
-
-
 
 </section>
 
