--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -39,7 +39,7 @@
           src="assets/sirplay platform.jpg"
         />
 
-        <div class="demo_btn_sec">
+        <div class="demo_btn_sec rotateInDownLeft animated">
           <button class="demo_btns_c">Ask for Demo!</button>
         </div>
       </div>
