--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -34,11 +34,9 @@
 </div>
 
 <div class="onther_btn">
-<button class="hover-1_1 otn_s_1 "><i class="fa-solid fa-phone"></i>     Contact us!</button> 
+<button class="hover-1_1 otn_s_1 button_slide slide_right"><i class="fa-solid fa-phone"></i>     Contact us!</button> 
 
 </div>
-
-
     </div>
 
 <div class="sports_book_col_1">
@@ -168,10 +166,7 @@
           <img src="assets/crypto-bingo-providers-768x274.webp" alt="">
           </div>
         </div>
-      
       </section>
-
-
       <section class="data_treading_sec">
     <h1 class="treading_head">Data & Trading</h1>
     <p class="theading_para">We offer trading and risk management services, odds management consultancy and winnings coverage. Sirplay started its business as risk manager 15 years ago,  since then we have been continuously investing in our mathematical algorithm to guarantee zero losses! We are so confident in our system that we pay you in case of loss.</p>  
@@ -196,4 +191,4 @@ Gambling Payment System
 
       <app-contact-com></app-contact-com>
 
-<app-footer></app-footer>
+      <app-footer></app-footer>
