--- a/src/app/demo/demo.component.css
+++ b/src/app/demo/demo.component.css
@@ -2487,6 +2487,7 @@ cursor: pointer;
     border-radius: 6px;
     font-size: 18px;
     font-weight: 600;  
+    padding-bottom: 38px;
 }
 
 @media screen and (max-width: 820px) {
@@ -13668,4 +13669,26 @@ font-size: 18px;
     font-size: 18px;  
     line-height: 26px;
 
+}
+.rotateInDownLeft {
+    animation-name: rotateInDownLeft;
+}
+
+.animated {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+@keyframes rotateInDownLeft {
+    
+
+0% {
+    transform-origin: left bottom;
+    transform: rotate3d(0,0,1,-45deg);
+    opacity: 0;
+}
+100% {
+    transform-origin: left bottom;
+    transform: none;
+    opacity: 1;
+}
 }
