--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -2399,4 +2399,48 @@ width: 97%;
   .sportsbetting-online-retail-col1{
     margin-left: 24px ;
   }
+  .x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-image, .x-anchor, .x-text-headline, .x-slide {
+    transition-property: border-color, background-color, box-shadow, opacity, filter, transform;
+}
+.m73-28 > .is-primary {
+  width: 100%;
+  height: 100%;
+  color: rgb(160,197,40);
+  transform-origin: 0% 50%;
+}
+
+[data-x-particle*=overlap][data-x-particle~=scale-x], [data-x-particle*=inside][data-x-particle*=c_c][data-x-particle~=scale-x] {
+  /* transform: translate3d(-50%, -50%, 0) scale3d(0, 1, 1); */
+}
+[data-x-particle*=overlap][data-x-particle*=_l] {
+  /* left: 0%; */
+}
+[data-x-particle*=overlap][data-x-particle*=c_] {
+  /* top: 50%; */
+}
+.x-ttf, .x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-acc-header, .x-acc-header-indicator, .x-crumbs-link, .x-paginate-inner > *, .x-anchor, .x-anchor-text-primary, .x-anchor-text-secondary, .x-anchor-sub-indicator, .x-anchor.has-int-content .x-anchor-content, .x-bar-is-sticky, .x-bar-is-sticky .x-bar-content, [data-x-toggle-collapse], .x-graphic-child, .x-image, .x-line, .x-mini-cart li, .x-mini-cart a:not(.x-anchor), .x-modal-close, .x-search, .x-search-btn, .x-search-input, .x-icon, .x-text, .x-text-content-text-primary, .x-text-content-text-subheadline, .x-text-typing, .x-typed-cursor, .x-menu-first-level, .x-menu-layered:not(.x-menu-first-level), .x-card, .x-card-faces, .x-statbar, .x-statbar-bar, .x-statbar-label, .x-wc-add-to-cart-form, .x-wc-shop-sort, [data-x-particle], .x-bar, .x-bar-scroll-button, .x-bar-container, .x-slide, .x-slide-pagination, .x-slide-pagination li {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+[data-x-particle] {
+  transition-property: opacity, transform;
+}
+.x-td, .x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-acc-header, .x-acc-header-indicator, .x-crumbs-link, .x-paginate-inner > *, .x-anchor, .x-anchor-text-primary, .x-anchor-text-secondary, .x-anchor-sub-indicator, .x-anchor.has-int-content .x-anchor-content, .x-bar-is-sticky, .x-bar-is-sticky .x-bar-content, [data-x-toggle-collapse], .x-graphic-child, .x-image, .x-line, .x-mini-cart li, .x-mini-cart a:not(.x-anchor), .x-modal-close, .x-search, .x-search-btn, .x-search-input, .x-icon, .x-text, .x-text-content-text-primary, .x-text-content-text-subheadline, .x-text-typing, .x-typed-cursor, .x-menu-first-level, .x-menu-layered:not(.x-menu-first-level), .x-wc-add-to-cart-form, .x-wc-shop-sort, [data-x-particle], .x-bar, .x-bar-scroll-button, .x-bar-container, .x-slide, .x-slide-pagination, .x-slide-pagination li {
+  transition-duration: 300ms;
+}
+[data-x-particle] {
+  transition-delay: 0ms;
+}
+[data-x-particle*=overlap], [data-x-particle*=inside][data-x-particle*=c_c] {
+  transform: translate3d(-50%, -50%, 0);
+}
+[data-x-particle] span {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: inherit;
+  background-color: currentColor;
+}
   /* mobile betting */
