--- a/src/app/web3sportbook/web3sportbook.component.css
+++ b/src/app/web3sportbook/web3sportbook.component.css
@@ -4,3 +4,39 @@
     background-image: url(/assets/we-are-sirplay.jpg.webp);
   background-size: cover ;
 }
+
+button {
+  
+  position: relative;
+color: black;
+  z-index: 1;
+}
+button:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: -2;
+}
+button:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color:#a6c929;
+  transition: all 0.3s;
+  z-index: -1;
+}
+button:hover {
+  color: #fff;
+  
+  border-color:#a6c929;
+}
+button:hover:before {
+  width: 100%;
+}
