--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -255,7 +255,7 @@
       <div class="crypto_col_1">
         <img
           class="crypto_sec_img2"
-          src="assets/sirplay-vrnl-33.webp"
+          src="assets/sirplay vrnl 33.webp"
           width="531"
           height="295"
           title="Crypto Sportsbook"
