--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -58,7 +58,7 @@
     <div class="sportsbetting-mainfeature-main">
       <div class="sportsbetting-mainfeature-col1">
         <img
-         class="sport_images_1"  src="assets/sirplay vrnl 10_data.jpg"
+         class="sport_images_1"  src="assets/sirplay vrnl 10_data.webp"
           alt="images"
         />
       </div>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="sportsbetting-benefits-image">
-        <img  class="images_benefit_1" src="assets/sirplay vrnl 29_data.jpg" alt="images" />
+        <img  class="images_benefit_1" src="assets/sirplay vrnl 29_data.webp" alt="images" />
       </div>
     </div>
   </section>
@@ -188,7 +188,7 @@
       </div>
 
       <div class="sportsbetting-complete-sports-col2">
-        <img  class="crz_images" src="assets/sirplay vrnl 22.jpg" alt="images" title="cr7" />
+        <img _ngcontent-wbf-c86="" src="assets/sirplay vrnl 22.webp" width="353" height="650" class="web3_img">
       </div>
     </div>
   </section>
@@ -260,7 +260,7 @@
         </p>
       </div>
       <div class="sportsbetting-betting-software-col2">
-        <img class="addverties_img" src="assets/sirplay online c.jpg" alt="" />
+        <img class="addverties_img" src="assets/sirplay online c.webp" alt="" />
       </div>
     </div>
   </section>
@@ -271,7 +271,7 @@
       <div class="sportsbetting-online-retail-col1">
         <img
           class="payment_img"
-         class="payment_system" src="assets/sirplay vrnl 32_payment.jpg"
+         class="payment_system" src="assets/sirplay vrnl 32_payment.webp"
           alt=""
         />
       </div>
