--- a/src/app/online-casino-software/online-casino-software.component.css
+++ b/src/app/online-casino-software/online-casino-software.component.css
@@ -1,4 +1,3 @@
-<<<<<<< Updated upstream
 .container_imgs{
 width: 853px;
 height: 344px;
@@ -19,7 +18,6 @@ height: 344px;
         width: 100%;
         height: auto;
         }
-=======
 .online-casino-button {
     background: #a0c528;
     padding: 15px 25px;
@@ -30,5 +28,5 @@ height: 344px;
 }
 .online-casino-button:hover {
     color: white;
->>>>>>> Stashed changes
+}
 }
