--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,15 +26,15 @@
                       </ul>
                     </div>
                   </li>
-                  <li class="hover_me">
+                  <!-- <li class="hover_me">
                     <a routerLink="/wagering-solutions">Wagering solution</a>
                     <div class="sub_menu_3">
                       <ul>
                         <li><a routerLink="/cashout">Cashout</a></li>
                       </ul>
                     </div>
-                  </li>
-                  <li class="hover_me">
+                  </li> -->
+                  <!-- <li class="hover_me">
                     <a routerLink="/sports-betting-software/retail-solutions">Betting retail</a>
                     <div class="sub_menu_4">
                       <ul>
@@ -43,7 +43,7 @@
                         </li>
                       </ul>
                     </div>
-                  </li>
+                  </li> -->
                   <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
                 </ul>
               </div>
@@ -109,12 +109,12 @@
 
               <div class="sub_menu">
                 <ul>
-                  <li><a routerLink="/demo-sportsbook">Demo</a></li>
+                  <!-- <li><a routerLink="/demo-sportsbook">Demo</a></li> -->
                   <li><a routerLink="/about-us">About us</a></li>
                   <li>
                     <a routerLink="/online-sportsbook-software">Online sportsbook software</a>
                   </li>
-                  <li><a routerLink="/certified-sports-betting-software">Certifications</a></li>
+                  <!-- <li><a routerLink="/certified-sports-betting-software">Certifications</a></li> -->
                 </ul>
               </div>
             </li>
