--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -23,7 +23,7 @@
     
     
     </li>
-    <li><a href=""> WEB3 </a> <i class="fa-solid fa-angles-down"></i>
+    <!-- <li><a href=""> WEB3 </a> <i class="fa-solid fa-angles-down"></i>
         <div class="sub_menu">
             <ul>
                 <li> <a routerLink="/web3-casino"> Web3 casino</a> </li>
@@ -31,14 +31,14 @@
             </ul>
         </div>
     
-    </li>
+    </li> -->
     <li><a href=""> COMPANY </a> <i class="fa-solid fa-angles-down"></i>
     
         <div class="sub_menu">
             <ul>
                 <li> <a routerLink="/about-us"> About</a></li>
                 <li> <a routerLink="/"> Sportsbook software provider</a></li>
-                <li> <a routerLink="/certified-sports-betting-software">Certification</a> </li>
+                <!-- <li> <a routerLink="/certified-sports-betting-software">Certification</a> </li> -->
                 <li> <a routerLink="/contact">Contact us</a></li>
 
     
