--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -27,7 +27,7 @@
           Web3 and Crypto Casino or white label solutions.
         </p>
         <h4 class="header_plat">Try our Betting software</h4>
-        <a class="platform_anchor"><p>https://www.rex.games/</p></a>
+        <a class="platform_anchor" href="https://cricbuzzer.io"target="_blank"><p>https://cricbuzzer.io</p></a>
         <h4 class="header_plat">Try our web3 sportsbook</h4>
         <a class="platform_anchor"><p>https://www.sirplay.bet/</p></a>
         <br />
