--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -11,14 +11,14 @@
         <li><a class="navbar-link" routerLink="/" >Sirplay</a></li>
         <li><a  class="navbar-link" href="">Sports betting software <i class="fa-solid fa-angle-down"></i></a>
           <ul id="submenu" >
-              <li><a routerLink="/sports-betting-software/retail-solutions">Retail solution <i class="fa-solid fa-angle-down"></i></a>
+              <!-- <li><a routerLink="/sports-betting-software/retail-solutions">Retail solution <i class="fa-solid fa-angle-down"></i></a>
               <ul id="menu">
 <li><a routerLink="/betting-terminals" >Betting terminals</a></li>
               </ul>
               
-              </li>
+              </li> -->
               <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
-              <li><a routerLink="/cashout">Cashout</a></li>
+              <!-- <li><a routerLink="/cashout">Cashout</a></li> -->
               <li><a routerLink="/sportsbook-iframe">Sportsbook iFrame   <i class="fa-solid fa-angle-down"></i></a>
                   <ul id="menu_2">
                       <li><a routerLink="/"> Sport betting widget</a></li>
@@ -40,7 +40,7 @@
       </ul>
       
       </li>
-        <li><a class="navbar-link" href="#">Web3 <i class="fa-solid fa-angle-down"></i></a>
+        <!-- <li><a class="navbar-link" href="#">Web3 <i class="fa-solid fa-angle-down"></i></a>
       
           <ul id="submenu">
               <li><a routerLink="/web3-sportsbook">Web3 Sportsbook</a></li>
@@ -51,13 +51,13 @@
   
           </ul>
       
-      </li>
+      </li> -->
         <li>
           <li><a class="navbar-link" href="#">Company <i class="fa-solid fa-angle-down"></i></a>
           
               <ul id="submenu">
                   <li><a routerLink="/about-us">About</a></li>
-                  <li><a routerLink="/certified-sports-betting-software">Certifications </a></li>
+                  <!-- <li><a routerLink="/certified-sports-betting-software">Certifications </a></li> -->
   
       
               </ul>
