--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -26,10 +26,10 @@
           Here the options available: Online and retail Sportsbook software,
           Web3 and Crypto Casino or white label solutions.
         </p>
-        <h4 class="header_plat">Try our Betting software</h4>
+        <h4 class="header_plat">Try our B2B Betting software</h4>
+        <a class="platform_anchor" href="https://www.betskyexch.com/"target="_blank"><p>https://www.betskyexch.com/</p></a>
+        <h4 class="header_plat">Try our B2C Betting software</h4>
         <a class="platform_anchor" href="https://cricbuzzer.io"target="_blank"><p>https://cricbuzzer.io</p></a>
-        <h4 class="header_plat">Try our web3 sportsbook</h4>
-        <a class="platform_anchor"><p>https://www.sirplay.bet/</p></a>
         <br />
         <button class="button_slide slide_right">
           <i class="fa-solid fa-phone"></i> Contact us!
