--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -65,7 +65,7 @@
 <section class="container7">
     <div class="container7-row">
     <div class="container7-col1">
-        <img class="container_images_b" src="assets/sirplay vrnl 5_data.jpg">
+        <img class="container_images_b" src="assets/sirplay vrnl 5_data.webp">
 
     </div>
 
