--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -99,7 +99,7 @@
     <footer>
       <div class="footer_sec">
         <div class="footer_para">
-          <p><a href="">Sirplay.com.</a> 2023 All Rights Reserved</p>
+          <p style="color: white;"><a href="">vrnl.net.</a> 2023 All Rights Reserved</p>
         </div>
       </div>
     </footer>
