--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="nav_col_1">
 <ul class="nav_col_2">
-    <li><a routerLink="/white-label-betting-platform" > WHITE LABEL SPORTSBOOK </a>   <i class="fa-solid fa-angles-down"></i></li>
+    <li><a routerLink="/white-label-betting-platform" > WHITE LABEL SPORTSBOOK </a></li>
     <li><a href="">WHITE LABEL CASINO  </a> <i class="fa-solid fa-angles-down"></i>
     <div class="sub_menu">
         <ul>
