--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -157,16 +157,16 @@
         <h2>Complete Sports <strong> Betting software </strong></h2>
         <p>What have we got for you?</p>
         <ul>
-          <li>
+          <!-- <li>
             <strong> Verification Procedures KYC,</strong> approved by the
             regulatory bodies
           </li>
           <li>
             <strong> Gambling payment gateways, </strong>including Bitcoin and
             crypto currencies
-          </li>
+          </li> -->
           <li>
-            <strong> Affiliate marketing tools,</strong> referral system, and
+            <strong> Affiliate marketing tools</strong> and
             social media
           </li>
           <li>
