--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -132,7 +132,7 @@
                   <div class="use_list_1" id="panel_4">
                   <li (click)="anime_1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
                   <li><a routerLink="/about-us">About</a></li>
-                  <li><a routerLink="/certified-sports-betting-software">Certifications</a></li>
+                  <!-- <li><a routerLink="/certified-sports-betting-software">Certifications</a></li> -->
             
                   </div>
               </ul>
