--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -25,14 +25,14 @@
           process.
         </p>
 
-        <h3>Try our Betting software</h3>
+        <h3>Try our B2B Betting software </h3>
         <div class="sportsbetting-section1-col1-link">
-          <a href="https://www.rex.games/">https://www.rex.games/</a>
+          <a href="https://www.rex.games/">https://www.betskyexch.com/</a>
         </div>
 
-        <h3>Try our web3 sportsbook</h3>
+        <h3>Try our B2C Betting software </h3>
         <div class="sportsbetting-section1-col1-link">
-          <a href="https://www.sirplay.bet/">https://www.sirplay.bet/</a>
+          <a href="https://www.sirplay.bet/">https://cricbuzzer.io/</a>
         </div>
 
         <div class="sportsbetting-section1-button">
