--- a/src/app/whitecasino/whitecasino.component.css
+++ b/src/app/whitecasino/whitecasino.component.css
@@ -2845,7 +2845,16 @@ color: #000;
   border: none;
   box-shadow: 0em 0.15em 0.65em 0em rgba(0,0,0,0.25);
   width: 160px;
+  padding-bottom: 32px;
+  border-top-left-radius: 0.35em;
+    border-top-right-radius: 0.35em;
+    border-bottom-right-radius: 0.35em;
+    border-bottom-left-radius: 0.35em;
+    background-color: rgba(255,255,255,1);
+    box-shadow: 0em 0.15em 0.65em 0em rgba(0,0,0,0.25);
+    color: rgba(0,0,0,0.5);
 }
+
 .white_f_btn:hover{
   color: gray;
 }
